--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,7 @@
 
 @layer base {
   :root {
-    /* --background: 0 0% 100% */
-    --background: 40 25% 96%; /* warm ivory */
+    --background: 40 25% 96%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
